creating user report and bug fixing
