# src/utils/validations.js
@@ -1,7 +1,4 @@
 import Joi from 'joi'
-// dob: Joi.date().format('YYYY-MM-DD').options({ convert: false }),
-// role: Joi.array().items(Joi.string().valid('User', 'Admin', 'SuperAdmin').insensitive()),
-// gender: Joi.array().items(Joi.string().valid('male', 'female').insensitive()),
 
 export const createUserSchema = (body) => {
   return Joi.object({
@@ -10,8 +7,8 @@ export const createUserSchema = (body) => {
     lastName: Joi.string().optional().allow(''),
     role: Joi.string().valid('User', 'Admin', 'SuperAdmin').required(),
     gender: Joi.string().valid('male', 'female').required(),
-    title: Joi.string().valid('mr', 'ms', 'baby', 'master', 'dr').required(),
-    dateOfBirth: Joi.date().required(),
+    title: Joi.string().valid('mrs', 'ms', 'mr').required(),
+    dob: Joi.date().required(),
     address: Joi.string().min(2).max(100).required(),
     contact: Joi.string().length(10).pattern(/^[0-9]+$/).required()
   }).validate(body)
@@ -21,4 +18,13 @@ export const deleteUserSchema = (param) => {
   return Joi.object({
     id: Joi.number().required()
   }).validate(param)
+}
+
+export const createUserReportSchema = (body) => {
+  return Joi.object({
+    testResult: Joi.object().required(),
+    testId: Joi.number().required(),
+    patientId: Joi.number().required()
+
+  }).validate(body)
 }
